--- a/pages/about.html
+++ b/pages/about.html
@@ -31,7 +31,7 @@
 			</div>
 			<nav>
 				<ul>
-					<li><a href="./index.html">Home</a></li>
+					<li><a href="../index.html">Home</a></li>
 					<li><a href="#" class="active">About</a></li>
 					<li><a href="./menus.html">Menus</a></li>
 					<li><a href="./contact.html">Contact</a></li>
