--- a/pages/contact.html
+++ b/pages/contact.html
@@ -34,7 +34,7 @@
 			</div>
 			<nav>
 				<ul>
-					<li><a href="./index.html">Home</a></li>
+					<li><a href="../index.html">Home</a></li>
 					<li><a href="./about.html">About</a></li>
 					<li><a href="./menus.html">Menus</a></li>
 					<li><a href="#" class="active">Contact</a></li>
