--- a/pages/menus.html
+++ b/pages/menus.html
@@ -31,7 +31,7 @@
 			</div>
 			<nav>
 				<ul>
-					<li><a href="./index.html">Home</a></li>
+					<li><a href="../index.html">Home</a></li>
 					<li><a href="./about.html">About</a></li>
 					<li><a href="#" class="active">Menus</a></li>
 					<li><a href="./contact.html">Contact</a></li>
@@ -42,8 +42,23 @@
 			<section class="sides">
 				<h1>Details of our menus</h1>
 				<p>Choose your main course according to your menu !</p>
-				<div class="container-sides-card">
-					<div class="adaptive-img-cover">
+				<div class="filtered-list">
+					<div class="cheat-div"></div>
+					<button class="filter-option" data-filter="*" tabindex="-1" autofocus>
+						All
+					</button>
+					<button class="filter-option" data-filter="meat" tabindex="-1">
+						Meat
+					</button>
+					<button class="filter-option" data-filter="vegan" tabindex="-1">
+						Vegan
+					</button>
+					<button class="filter-option" data-filter="fish" tabindex="-1">
+						Fish
+					</button>
+					<span class="cheat-div"></span>
+
+					<div class="adaptive-img-cover fish">
 						<span>
 							<img
 								src="../assets/images/menus img/fish-01.jpg"
@@ -60,7 +75,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="adaptive-img-cover">
+					<div class="adaptive-img-cover vegan">
 						<span>
 							<img
 								src="../assets/images/menus img/vegan-03.jpg"
@@ -77,7 +92,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="adaptive-img-cover">
+					<div class="adaptive-img-cover meat">
 						<span>
 							<img
 								src="../assets/images/menus img/meat-03.jpg"
@@ -94,7 +109,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="adaptive-img-cover">
+					<div class="adaptive-img-cover fish">
 						<span>
 							<img
 								src="../assets/images/menus img/fish-02.jpg"
@@ -111,7 +126,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="adaptive-img-cover">
+					<div class="adaptive-img-cover meat">
 						<span>
 							<img
 								src="../assets/images/menus img/meat-01.jpg"
@@ -128,7 +143,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="adaptive-img-cover">
+					<div class="adaptive-img-cover vegan">
 						<span>
 							<img
 								src="../assets/images/menus img/vegan-02.jpg"
@@ -145,7 +160,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="adaptive-img-cover">
+					<div class="adaptive-img-cover meat">
 						<span>
 							<img
 								src="../assets/images/menus img/meat-02.jpg"
@@ -162,7 +177,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="adaptive-img-cover">
+					<div class="adaptive-img-cover fish">
 						<span>
 							<img
 								src="../assets/images/menus img/fish-03.jpg"
@@ -179,7 +194,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="adaptive-img-cover">
+					<div class="adaptive-img-cover vegan">
 						<span>
 							<img
 								src="../assets/images/menus img/vegan-01.jpg"
@@ -196,6 +211,7 @@
 							</div>
 						</div>
 					</div>
+					<span class="cheat-container"></span>
 				</div>
 			</section>
 
@@ -370,3 +386,169 @@
 		</footer>
 	</body>
 </html>
+
+<!-- <div class="controls">
+	<input type="radio" id="all" name="all" value="all" />
+	<label for="all">All</label><br />
+	<input type="radio" id="meat" name="meat" value="meat" />
+	<label for="meat">Meat</label><br />
+	<input type="radio" id="fish" name="fish" value="fish" />
+	<label for="fish">Fish</label><br />
+	<input type="radio" id="vegan" name="vegan" value="vegan" />
+	<label for="vegan">Vegan</label><br />
+</div>
+<div class="container-sides-card container">
+	<div class="adaptive-img-cover fish">
+		<span>
+			<img
+				src="../assets/images/menus img/fish-01.jpg"
+				alt="Grilled mussels" />
+		</span>
+		<div class="container-price">
+			<div class="price">
+				<div class="adaptive-img-contain">
+					<span>
+						<img src="../assets/icons/fork-knife.svg" alt="Logo" />
+					</span>
+				</div>
+				<span>Grilled mussels</span>
+			</div>
+		</div>
+	</div>
+	<div class="adaptive-img-cover vegan">
+		<span>
+			<img
+				src="../assets/images/menus img/vegan-03.jpg"
+				alt="Mixed vegetables" />
+		</span>
+		<div class="container-price">
+			<div class="price">
+				<div class="adaptive-img-contain">
+					<span>
+						<img src="../assets/icons/fork-knife.svg" alt="Logo" />
+					</span>
+				</div>
+				<span>Mixed vegetables</span>
+			</div>
+		</div>
+	</div>
+	<div class="adaptive-img-cover meat">
+		<span>
+			<img
+				src="../assets/images/menus img/meat-03.jpg"
+				alt="Freshly kebabs" />
+		</span>
+		<div class="container-price">
+			<div class="price">
+				<div class="adaptive-img-contain">
+					<span>
+						<img src="../assets/icons/fork-knife.svg" alt="Logo" />
+					</span>
+				</div>
+				<span>Freshly kebabs</span>
+			</div>
+		</div>
+	</div>
+	<div class="adaptive-img-cover fish">
+		<span>
+			<img
+				src="../assets/images/menus img/fish-02.jpg"
+				alt="Cajun shrimp" />
+		</span>
+		<div class="container-price">
+			<div class="price">
+				<div class="adaptive-img-contain">
+					<span>
+						<img src="../assets/icons/fork-knife.svg" alt="Logo" />
+					</span>
+				</div>
+				<span>Cajun shrimp</span>
+			</div>
+		</div>
+	</div>
+	<div class="adaptive-img-cover meat">
+		<span>
+			<img
+				src="../assets/images/menus img/meat-01.jpg"
+				alt="Freshly burger" />
+		</span>
+		<div class="container-price">
+			<div class="price">
+				<div class="adaptive-img-contain">
+					<span>
+						<img src="../assets/icons/fork-knife.svg" alt="Logo" />
+					</span>
+				</div>
+				<span>Freshly burger</span>
+			</div>
+		</div>
+	</div>
+	<div class="adaptive-img-cover vegan">
+		<span>
+			<img
+				src="../assets/images/menus img/vegan-02.jpg"
+				alt="Grilled eggplants" />
+		</span>
+		<div class="container-price">
+			<div class="price">
+				<div class="adaptive-img-contain">
+					<span>
+						<img src="../assets/icons/fork-knife.svg" alt="Logo" />
+					</span>
+				</div>
+				<span>Grilled eggplants</span>
+			</div>
+		</div>
+	</div>
+	<div class="adaptive-img-cover meat">
+		<span>
+			<img
+				src="../assets/images/menus img/meat-02.jpg"
+				alt="Beef stew with pasta" />
+		</span>
+		<div class="container-price">
+			<div class="price">
+				<div class="adaptive-img-contain">
+					<span>
+						<img src="../assets/icons/fork-knife.svg" alt="Logo" />
+					</span>
+				</div>
+				<span>Beef stew with pasta</span>
+			</div>
+		</div>
+	</div>
+	<div class="adaptive-img-cover fish">
+		<span>
+			<img
+				src="../assets/images/menus img/fish-03.jpg"
+				alt="Grilled salmon" />
+		</span>
+		<div class="container-price">
+			<div class="price">
+				<div class="adaptive-img-contain">
+					<span>
+						<img src="../assets/icons/fork-knife.svg" alt="Logo" />
+					</span>
+				</div>
+				<span>Grilled salmon</span>
+			</div>
+		</div>
+	</div>
+	<div class="adaptive-img-cover vegan">
+		<span>
+			<img
+				src="../assets/images/menus img/vegan-01.jpg"
+				alt="Vegetable Jambalaya" />
+		</span>
+		<div class="container-price">
+			<div class="price">
+				<div class="adaptive-img-contain">
+					<span>
+						<img src="../assets/icons/fork-knife.svg" alt="Logo" />
+					</span>
+				</div>
+				<span>Vegetable Jambalaya</span>
+			</div>
+		</div>
+	</div>
+</div> -->
