--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Freshly restaurant</title>
-		<link rel="icon" type="image/x-icon" href="../assets/icons/favicon.png" />
+		<link rel="icon" type="image/x-icon" href="./assets/icons/favicon.png" />
 		<link rel="stylesheet" href="./css/index.css" />
 		<link
 			rel="stylesheet"
@@ -23,7 +23,7 @@
 				<a href="#">
 					<div class="adaptive-img-contain">
 						<span>
-							<img src="../assets/icons/logo.png" alt="logo" />
+							<img src="./assets/icons/logo.png" alt="logo" />
 						</span>
 					</div>
 				</a>
@@ -45,7 +45,7 @@
 						<div id="slides__1" class="slide">
 							<div class="adaptive-img-cover">
 								<span>
-									<img src="../assets/images/slider-01.jpg" alt="Slide 1" />
+									<img src="./assets/images/slider-01.jpg" alt="Slide 1" />
 								</span>
 							</div>
 							<a class="slide__prev" href="#slides__4" title="Next"></a>
@@ -55,7 +55,7 @@
 						<div id="slides__2" class="slide">
 							<div class="adaptive-img-cover">
 								<span>
-									<img src="../assets/images/slider-02.jpg" alt="Slide 2" />
+									<img src="./assets/images/slider-02.jpg" alt="Slide 2" />
 								</span>
 							</div>
 							<a class="slide__prev" href="#slides__1" title="Prev"></a>
@@ -65,7 +65,7 @@
 						<div id="slides__3" class="slide">
 							<div class="adaptive-img-cover">
 								<span>
-									<img src="../assets/images/slider-03.jpg" alt="Slide 3" />
+									<img src="./assets/images/slider-03.jpg" alt="Slide 3" />
 								</span>
 							</div>
 							<a class="slide__prev" href="#slides__2" title="Prev"></a>
@@ -86,7 +86,7 @@
 				<div class="hero-container">
 					<div class="adaptive-img-cover">
 						<span>
-							<img src="../assets/images/location.jpg" alt="Miam" />
+							<img src="./assets/images/location.jpg" alt="Miam" />
 						</span>
 					</div>
 					<div class="hero-text">
@@ -122,7 +122,7 @@
 						<h3>Meat menu</h3>
 						<div class="adaptive-img-cover">
 							<span>
-								<img src="../assets/images/meat-menu.jpg" alt="Meat menu" />
+								<img src="./assets/images/meat-menu.jpg" alt="Meat menu" />
 							</span>
 							<div class="container-price">
 								<div class="price">
@@ -143,7 +143,7 @@
 							<button type="button">
 								<div class="adaptive-img-contain">
 									<span>
-										<img src="../assets/icons/fork-knife.svg" alt="See more" />
+										<img src="./assets/icons/fork-knife.svg" alt="See more" />
 									</span>
 								</div>
 								<span>See more</span>
@@ -154,7 +154,7 @@
 						<h3>Fish menu</h3>
 						<div class="adaptive-img-cover">
 							<span>
-								<img src="../assets/images/fish-menu.jpg" alt="Meat menu" />
+								<img src="./assets/images/fish-menu.jpg" alt="Meat menu" />
 							</span>
 							<div class="container-price">
 								<div class="price">
@@ -175,7 +175,7 @@
 							<button type="button">
 								<div class="adaptive-img-contain">
 									<span>
-										<img src="../assets/icons/fork-knife.svg" alt="See more" />
+										<img src="./assets/icons/fork-knife.svg" alt="See more" />
 									</span>
 								</div>
 								<span>See more</span>
@@ -187,7 +187,7 @@
 						<div class="adaptive-img-cover">
 							<span>
 								<img
-									src="../assets/images/vegetarian-menu.jpg"
+									src="./assets/images/vegetarian-menu.jpg"
 									alt="Meat menu" />
 							</span>
 							<div class="container-price">
@@ -209,7 +209,7 @@
 							<button type="button">
 								<div class="adaptive-img-contain">
 									<span>
-										<img src="../assets/icons/fork-knife.svg" alt="See more" />
+										<img src="./assets/icons/fork-knife.svg" alt="See more" />
 									</span>
 								</div>
 								<span>See more</span>
@@ -248,7 +248,7 @@
 				<div class="terms">
 					<div class="adaptive-img-contain">
 						<span>
-							<img src="../assets/icons/logo-3wa.webp" alt="Logo 3wa" />
+							<img src="./assets/icons/logo-3wa.webp" alt="Logo 3wa" />
 						</span>
 					</div>
 					<p>
