--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
 			<section class="special-menus">
 				<h2>Special menus</h2>
-				<div class="container-special-menus">
+				<div class="container-special-menus animated">
 					<div class="card-special-menus">
 						<h3>Meat menu</h3>
 						<div class="adaptive-img-cover">
@@ -220,50 +220,48 @@
 			</section>
 		</main>
 		<footer>
-			<div class="container-footer">
-				<div class="info">
-					<div class="card-info">
-						<h6>Opening hours</h6>
-						<span>Monday: Closed</span>
-						<span>Tue-Wed : 9am - 10pm</span>
-						<span>Thu-Fri : 9am - 10pm</span>
-						<span>Sat-Sun : 5pm - 10pm</span>
-					</div>
-					<div class="card-info">
-						<h6>Contact</h6>
-						<span>13 Christopher Street</span>
-						<span>New York,</span>
-						<span>NY 10014-3543</span><br />
-						<span>+01 2000 800 9999</span>
-					</div>
-					<div class="card-info">
-						<h6>Social networks</h6>
-						<div class="container-card-info">
-							<a href="#" class="fab fa-facebook-f"></a>
-							<a href="#" class="fab fa-instagram"></a>
-							<a href="#" class="fab fa-pinterest-p"></a>
-						</div>
+			<div class="info">
+				<div class="card-info">
+					<h6>Opening hours</h6>
+					<span>Monday: Closed</span>
+					<span>Tue-Wed : 9am - 10pm</span>
+					<span>Thu-Fri : 9am - 10pm</span>
+					<span>Sat-Sun : 5pm - 10pm</span>
+				</div>
+				<div class="card-info">
+					<h6>Contact</h6>
+					<span>13 Christopher Street</span>
+					<span>New York,</span>
+					<span>NY 10014-3543</span><br />
+					<span>+01 2000 800 9999</span>
+				</div>
+				<div class="card-info">
+					<h6>Social networks</h6>
+					<div class="container-card-info">
+						<a href="#" class="fab fa-facebook-f"></a>
+						<a href="#" class="fab fa-instagram"></a>
+						<a href="#" class="fab fa-pinterest-p"></a>
 					</div>
 				</div>
-				<div class="terms">
-					<div class="adaptive-img-contain">
-						<span>
-							<img src="./assets/icons/logo-3wa.webp" alt="Logo 3wa" />
-						</span>
-					</div>
-					<p>
-						Cet exercice de <a href="" target="_blank">3W Academy</a> est mis à
-						disposition
-						<span
-							>pour l'usage personnel des étudiants. Pas de Rediffusion -
-							Attribution - Pas d'Utilisation Commerciale - Pas de Modification
-							- International</span
-						>.<br />
-						Les autorisations au-delà du champ de cette licence peuvent être
-						obtenues auprès de contact@3wa.fr. Les maquettes ont été réalisées
-						par <span>Catherine Denos</span>.
-					</p>
+			</div>
+			<div class="terms">
+				<div class="adaptive-img-contain">
+					<span>
+						<img src="./assets/icons/logo-3wa.webp" alt="Logo 3wa" />
+					</span>
 				</div>
+				<p>
+					Cet exercice de <a href="" target="_blank">3W Academy</a> est mis à
+					disposition
+					<span
+						>pour l'usage personnel des étudiants. Pas de Rediffusion -
+						Attribution - Pas d'Utilisation Commerciale - Pas de Modification -
+						International</span
+					>.<br />
+					Les autorisations au-delà du champ de cette licence peuvent être
+					obtenues auprès de contact@3wa.fr. Les maquettes ont été réalisées par
+					<span>Catherine Denos</span>.
+				</p>
 			</div>
 		</footer>
 	</body>
