--- a/pages/menus.html
+++ b/pages/menus.html
@@ -42,7 +42,7 @@
 			<section class="sides">
 				<h1>Details of our menus</h1>
 				<p>Choose your main course according to your menu !</p>
-				<div class="filtered-list">
+				<div class="filtered-list animated">
 					<div class="cheat-div"></div>
 					<button class="filter-option" data-filter="*" tabindex="-1" autofocus>
 						All
@@ -221,7 +221,7 @@
 					Here are the deserts you can choose to finish your meal (included in
 					your menu).
 				</p>
-				<div class="container-sides-card">
+				<div class="container-sides-card animated">
 					<div class="adaptive-img-cover">
 						<span>
 							<img
@@ -282,7 +282,7 @@
 					Soft drinkgs are included, but if you want you can order one of our
 					excellent cocktails (not included in the menu).
 				</p>
-				<div class="container-sides-card">
+				<div class="container-sides-card animated">
 					<div class="adaptive-img-cover">
 						<span>
 							<img
@@ -386,169 +386,3 @@
 		</footer>
 	</body>
 </html>
-
-<!-- <div class="controls">
-	<input type="radio" id="all" name="all" value="all" />
-	<label for="all">All</label><br />
-	<input type="radio" id="meat" name="meat" value="meat" />
-	<label for="meat">Meat</label><br />
-	<input type="radio" id="fish" name="fish" value="fish" />
-	<label for="fish">Fish</label><br />
-	<input type="radio" id="vegan" name="vegan" value="vegan" />
-	<label for="vegan">Vegan</label><br />
-</div>
-<div class="container-sides-card container">
-	<div class="adaptive-img-cover fish">
-		<span>
-			<img
-				src="../assets/images/menus img/fish-01.jpg"
-				alt="Grilled mussels" />
-		</span>
-		<div class="container-price">
-			<div class="price">
-				<div class="adaptive-img-contain">
-					<span>
-						<img src="../assets/icons/fork-knife.svg" alt="Logo" />
-					</span>
-				</div>
-				<span>Grilled mussels</span>
-			</div>
-		</div>
-	</div>
-	<div class="adaptive-img-cover vegan">
-		<span>
-			<img
-				src="../assets/images/menus img/vegan-03.jpg"
-				alt="Mixed vegetables" />
-		</span>
-		<div class="container-price">
-			<div class="price">
-				<div class="adaptive-img-contain">
-					<span>
-						<img src="../assets/icons/fork-knife.svg" alt="Logo" />
-					</span>
-				</div>
-				<span>Mixed vegetables</span>
-			</div>
-		</div>
-	</div>
-	<div class="adaptive-img-cover meat">
-		<span>
-			<img
-				src="../assets/images/menus img/meat-03.jpg"
-				alt="Freshly kebabs" />
-		</span>
-		<div class="container-price">
-			<div class="price">
-				<div class="adaptive-img-contain">
-					<span>
-						<img src="../assets/icons/fork-knife.svg" alt="Logo" />
-					</span>
-				</div>
-				<span>Freshly kebabs</span>
-			</div>
-		</div>
-	</div>
-	<div class="adaptive-img-cover fish">
-		<span>
-			<img
-				src="../assets/images/menus img/fish-02.jpg"
-				alt="Cajun shrimp" />
-		</span>
-		<div class="container-price">
-			<div class="price">
-				<div class="adaptive-img-contain">
-					<span>
-						<img src="../assets/icons/fork-knife.svg" alt="Logo" />
-					</span>
-				</div>
-				<span>Cajun shrimp</span>
-			</div>
-		</div>
-	</div>
-	<div class="adaptive-img-cover meat">
-		<span>
-			<img
-				src="../assets/images/menus img/meat-01.jpg"
-				alt="Freshly burger" />
-		</span>
-		<div class="container-price">
-			<div class="price">
-				<div class="adaptive-img-contain">
-					<span>
-						<img src="../assets/icons/fork-knife.svg" alt="Logo" />
-					</span>
-				</div>
-				<span>Freshly burger</span>
-			</div>
-		</div>
-	</div>
-	<div class="adaptive-img-cover vegan">
-		<span>
-			<img
-				src="../assets/images/menus img/vegan-02.jpg"
-				alt="Grilled eggplants" />
-		</span>
-		<div class="container-price">
-			<div class="price">
-				<div class="adaptive-img-contain">
-					<span>
-						<img src="../assets/icons/fork-knife.svg" alt="Logo" />
-					</span>
-				</div>
-				<span>Grilled eggplants</span>
-			</div>
-		</div>
-	</div>
-	<div class="adaptive-img-cover meat">
-		<span>
-			<img
-				src="../assets/images/menus img/meat-02.jpg"
-				alt="Beef stew with pasta" />
-		</span>
-		<div class="container-price">
-			<div class="price">
-				<div class="adaptive-img-contain">
-					<span>
-						<img src="../assets/icons/fork-knife.svg" alt="Logo" />
-					</span>
-				</div>
-				<span>Beef stew with pasta</span>
-			</div>
-		</div>
-	</div>
-	<div class="adaptive-img-cover fish">
-		<span>
-			<img
-				src="../assets/images/menus img/fish-03.jpg"
-				alt="Grilled salmon" />
-		</span>
-		<div class="container-price">
-			<div class="price">
-				<div class="adaptive-img-contain">
-					<span>
-						<img src="../assets/icons/fork-knife.svg" alt="Logo" />
-					</span>
-				</div>
-				<span>Grilled salmon</span>
-			</div>
-		</div>
-	</div>
-	<div class="adaptive-img-cover vegan">
-		<span>
-			<img
-				src="../assets/images/menus img/vegan-01.jpg"
-				alt="Vegetable Jambalaya" />
-		</span>
-		<div class="container-price">
-			<div class="price">
-				<div class="adaptive-img-contain">
-					<span>
-						<img src="../assets/icons/fork-knife.svg" alt="Logo" />
-					</span>
-				</div>
-				<span>Vegetable Jambalaya</span>
-			</div>
-		</div>
-	</div>
-</div> -->
