Cleaning with mixins

--- a/pages/about.html
+++ b/pages/about.html
@@ -18,150 +18,159 @@
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0/css/solid.min.css" />
 	</head>
 	<body>
-		<header>
-			<div class="logo">
-				<a href="#">
-					<div class="adaptive-img-contain">
-						<span>
-							<img src="../assets/icons/logo.png" alt="logo" />
-						</span>
-					</div>
-				</a>
-				<a href="#"><h1>FRESHLY RESTAURANT</h1></a>
-			</div>
-			<nav>
-				<ul>
-					<li><a href="../index.html">Home</a></li>
-					<li><a href="#" class="active">About</a></li>
-					<li><a href="./menus.html">Menus</a></li>
-					<li><a href="./contact.html">Contact</a></li>
-				</ul>
-			</nav>
-		</header>
-
-		<main>
-			<section class="video">
-				<h1>About us</h1>
-				<p>
-					Welcome to Freshly Restaurant, a classic New York City restaurant,
-					owned by legendary restaurateur Ted Battely. Here the charm of old New
-					York meets 21st century modernity. In a historic building that has
-					housed a destination restaurant since the 1930s, Freshly Restaurant
-					today welcomes a convivial and urbane clientele.
-					<br />
-					<br />
-					Freshly Restaurant offers superb contemporary American cuisine, warm,
-					polished service and beautiful rooms suitable for a wide range of
-					events.
-				</p>
-				<video controls poster="../assets/images/poster.png">
-					<source src="../assets/videos/cooking.mp4" type="video/mp4" />
-					Your browser does not support the video tag.
-				</video>
-			</section>
-			<section class="private">
-				<h2>Private dining</h2>
-				<p>
-					Elegant and timeless, Freshly Restaurant features four private dining
-					areas that offer real versatility, whether you are having an intimate
-					birthday dinner for friends or using the entire townhouse for a
-					wedding celebration or corporate event.
-				</p>
-				<p>
-					Make new memories in our unforgettable private dining rooms. With
-					options for lunches, presentations, seated dinners, or cocktail
-					receptions, private dining at Patroon is the perfect opportunity to
-					create your own personal midtown oasis.
-				</p>
-				<p>
-					Whether you are nestled in one of our more intimate rooms for a
-					celebratory dinner or taking over our entire restaurant for a wedding
-					or special occasion, Freshly Restaurant is the perfect setting for a
-					unique, undeniably New York event.
-				</p>
-				<div class="container-private">
-					<figure>
-						<div class="adaptive-img-cover">
+		<div class="body">
+			<header>
+				<div class="logo">
+					<a href="#">
+						<div class="adaptive-img-contain">
 							<span>
-								<img src="../assets/images/dining-1.jpg" alt="First room" />
+								<img src="../assets/icons/logo.png" alt="logo" />
 							</span>
 						</div>
-						<figcaption>Can welcome up to 24 guests</figcaption>
-					</figure>
-					<figure>
-						<div class="adaptive-img-cover">
-							<span>
-								<img src="../assets/images/dining-2.jpg" alt="Seconde room" />
-							</span>
-						</div>
-						<figcaption>Can welcome up to 18 guests</figcaption>
-					</figure>
-					<figure>
-						<div class="adaptive-img-cover">
-							<span>
-								<img src="../assets/images/dining-3.jpg" alt="Third room" />
-							</span>
-						</div>
-						<figcaption>Can welcome up to 36 guests</figcaption>
-					</figure>
-					<figure>
-						<div class="adaptive-img-cover">
-							<span>
-								<img src="../assets/images/dining-4.jpg" alt="Fourth room" />
-							</span>
-						</div>
-						<figcaption>Can welcome up to 50 guests</figcaption>
-					</figure>
+					</a>
+					<a href="#"><h1>FRESHLY RESTAURANT</h1></a>
 				</div>
-			</section>
-		</main>
+				<nav>
+					<ul>
+						<li><a href="../index.html">Home</a></li>
+						<li><a href="#" class="active">About</a></li>
+						<li><a href="./menus.html">Menus</a></li>
+						<li><a href="./contact.html">Contact</a></li>
+					</ul>
+				</nav>
+			</header>
 
-		<footer>
-			<div class="container-footer">
+			<main>
+				<section class="video">
+					<h1>About us</h1>
+					<p>
+						Welcome to Freshly Restaurant, a classic New York City restaurant,
+						owned by legendary restaurateur Ted Battely. Here the charm of old
+						New York meets 21st century modernity. In a historic building that
+						has housed a destination restaurant since the 1930s, Freshly
+						Restaurant today welcomes a convivial and urbane clientele.
+						<br />
+						<br />
+						Freshly Restaurant offers superb contemporary American cuisine,
+						warm, polished service and beautiful rooms suitable for a wide range
+						of events.
+					</p>
+					<video controls poster="../assets/images/poster.png">
+						<source src="../assets/videos/cooking.mp4" type="video/mp4" />
+						Your browser does not support the video tag.
+					</video>
+				</section>
+				<section class="private">
+					<h2>Private dining</h2>
+					<p>
+						Elegant and timeless, Freshly Restaurant features four private
+						dining areas that offer real versatility, whether you are having an
+						intimate birthday dinner for friends or using the entire townhouse
+						for a wedding celebration or corporate event.
+					</p>
+					<p>
+						Make new memories in our unforgettable private dining rooms. With
+						options for lunches, presentations, seated dinners, or cocktail
+						receptions, private dining at Patroon is the perfect opportunity to
+						create your own personal midtown oasis.
+					</p>
+					<p>
+						Whether you are nestled in one of our more intimate rooms for a
+						celebratory dinner or taking over our entire restaurant for a
+						wedding or special occasion, Freshly Restaurant is the perfect
+						setting for a unique, undeniably New York event.
+					</p>
+					<div class="container-private">
+						<figure>
+							<div class="adaptive-img-cover">
+								<span>
+									<img src="../assets/images/dining-1.jpg" alt="First room" />
+								</span>
+							</div>
+							<figcaption>Can welcome up to 24 guests</figcaption>
+						</figure>
+						<figure>
+							<div class="adaptive-img-cover">
+								<span>
+									<img src="../assets/images/dining-2.jpg" alt="Seconde room" />
+								</span>
+							</div>
+							<figcaption>Can welcome up to 18 guests</figcaption>
+						</figure>
+						<figure>
+							<div class="adaptive-img-cover">
+								<span>
+									<img src="../assets/images/dining-3.jpg" alt="Third room" />
+								</span>
+							</div>
+							<figcaption>Can welcome up to 36 guests</figcaption>
+						</figure>
+						<figure>
+							<div class="adaptive-img-cover">
+								<span>
+									<img src="../assets/images/dining-4.jpg" alt="Fourth room" />
+								</span>
+							</div>
+							<figcaption>Can welcome up to 50 guests</figcaption>
+						</figure>
+					</div>
+				</section>
+			</main>
+
+			<footer>
 				<div class="info">
-					<div class="card-info">
-						<h6>Opening hours</h6>
-						<span>Monday: Closed</span>
-						<span>Tue-Wed : 9am - 10pm</span>
-						<span>Thu-Fri : 9am - 10pm</span>
-						<span>Sat-Sun : 5pm - 10pm</span>
-					</div>
-					<div class="card-info">
-						<h6>Contact</h6>
-						<span>13 Christopher Street</span>
-						<span>New York,</span>
-						<span>NY 10014-3543</span><br />
-						<span>+01 2000 800 9999</span>
-					</div>
-					<div class="card-info">
-						<h6>Social networks</h6>
-						<div class="container-card-info">
-							<a href="#" class="fab fa-facebook-f"></a>
-							<a href="#" class="fab fa-instagram"></a>
-							<a href="#" class="fab fa-pinterest-p"></a>
+					<div class="info-container">
+						<div class="card-info">
+							<h6>Opening hours</h6>
+							<span>Monday: Closed</span>
+							<span>Tue-Wed : 9am - 10pm</span>
+							<span>Thu-Fri : 9am - 10pm</span>
+							<span>Sat-Sun : 5pm - 10pm</span>
+						</div>
+						<div class="card-info">
+							<h6>Contact</h6>
+							<span>13 Christopher Street</span>
+							<span>New York,</span>
+							<span>NY 10014-3543</span><br />
+							<span>+01 2000 800 9999</span>
+						</div>
+						<div class="card-info">
+							<h6>Social networks</h6>
+							<div class="container-card-info">
+								<a href="#" class="fab fa-facebook-f"></a>
+								<a href="#" class="fab fa-instagram"></a>
+								<a href="#" class="fab fa-pinterest-p"></a>
+							</div>
 						</div>
 					</div>
 				</div>
 				<div class="terms">
-					<div class="adaptive-img-contain">
-						<span>
-							<img src="../assets/icons/logo-3wa.webp" alt="Logo 3wa" />
-						</span>
+					<div class="terms-container">
+						<div class="adaptive-img-contain">
+							<span>
+								<img src="../assets/icons/logo-3wa.webp" alt="Logo 3wa" />
+							</span>
+						</div>
+						<div class="text">
+							<p>
+								Cet exercice de <a href="" target="_blank">3W Academy</a> est
+								mis à disposition
+								<span
+									>pour l'usage personnel des étudiants. Pas de Rediffusion -
+									Attribution - Pas d'Utilisation Commerciale - Pas de
+									Modification - International</span
+								>.
+							</p>
+							<p>
+								Les autorisations au-delà du champ de cette licence peuvent être
+								obtenues auprès de contact@3wa.fr. Les maquettes ont été
+								réalisées par
+								<span>Catherine Denos</span>.
+							</p>
+						</div>
 					</div>
-					<p>
-						Cet exercice de <a href="" target="_blank">3W Academy</a> est mis à
-						disposition
-						<span
-							>pour l'usage personnel des étudiants. Pas de Rediffusion -
-							Attribution - Pas d'Utilisation Commerciale - Pas de Modification
-							- International</span
-						>.<br />
-						Les autorisations au-delà du champ de cette licence peuvent être
-						obtenues auprès de contact@3wa.fr. Les maquettes ont été réalisées
-						par <span>Catherine Denos</span>.
-					</p>
 				</div>
-			</div>
-		</footer>
+			</footer>
+		</div>
 	</body>
 </html>
