--- a/pages/contact.html
+++ b/pages/contact.html
@@ -21,133 +21,142 @@
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0/css/solid.min.css" />
 	</head>
 	<body>
-		<header>
-			<div class="logo">
-				<a href="#">
-					<div class="adaptive-img-contain">
-						<span>
-							<img src="../assets/icons/logo.png" alt="logo" />
-						</span>
-					</div>
-				</a>
-				<a href="#"><h1>FRESHLY RESTAURANT</h1></a>
-			</div>
-			<nav>
-				<ul>
-					<li><a href="../index.html">Home</a></li>
-					<li><a href="./about.html">About</a></li>
-					<li><a href="./menus.html">Menus</a></li>
-					<li><a href="#" class="active">Contact</a></li>
-				</ul>
-			</nav>
-		</header>
-		<main>
-			<section class="form">
-				<h1>Contact us</h1>
-				<p>If your want to make a reservation, please complete this form.</p>
-				<p>
-					<em>Fields with </em><span><em>are required.</em></span>
-				</p>
-				<div class="form-container">
-					<div class="form-container-top">
-						<div class="booking">
-							<h3>Reservation</h3>
-							<form action="#" method="post">
-								<label for="date"
-									>Date <input type="date" id="date" name="date" required
-								/></label>
-								<label for="time"
-									>Time <input type="time" id="time" name="time" required
-								/></label>
-								<label for="guests"
-									>Number of guests
-									<input type="number" id="guests" name="guests" required
-								/></label>
-							</form>
+		<div class="body">
+			<header>
+				<div class="logo">
+					<a href="#">
+						<div class="adaptive-img-contain">
+							<span>
+								<img src="../assets/icons/logo.png" alt="logo" />
+							</span>
 						</div>
-						<div class="details">
-							<h3>Details</h3>
-							<form action="#" method="post">
-								<label for="name"
-									>Name <input type="text" id="name" name="name" required
-								/></label>
-								<label for="email"
-									>Email
-									<input type="email" id="email" name="email" />
-								</label>
-								<label for="phone"
-									>Telephone <input type="tel" id="phone" name="phone"
-								/></label>
-							</form>
+					</a>
+					<a href="#"><h1>FRESHLY RESTAURANT</h1></a>
+				</div>
+				<nav>
+					<ul>
+						<li><a href="../index.html">Home</a></li>
+						<li><a href="./about.html">About</a></li>
+						<li><a href="./menus.html">Menus</a></li>
+						<li><a href="#" class="active">Contact</a></li>
+					</ul>
+				</nav>
+			</header>
+			<main>
+				<section class="form">
+					<h1>Contact us</h1>
+					<p>If your want to make a reservation, please complete this form.</p>
+					<p>
+						<em>Fields with </em><span><em>are required.</em></span>
+					</p>
+					<div class="form-container">
+						<div class="form-container-top">
+							<div class="booking">
+								<h3>Reservation</h3>
+								<form action="#" method="post">
+									<label for="date"
+										>Date <input type="date" id="date" name="date" required
+									/></label>
+									<label for="time"
+										>Time <input type="time" id="time" name="time" required
+									/></label>
+									<label for="guests"
+										>Number of guests
+										<input type="number" id="guests" name="guests" required
+									/></label>
+								</form>
+							</div>
+							<div class="details">
+								<h3>Details</h3>
+								<form action="#" method="post">
+									<label for="name"
+										>Name <input type="text" id="name" name="name" required
+									/></label>
+									<label for="email"
+										>Email
+										<input type="email" id="email" name="email" />
+									</label>
+									<label for="phone"
+										>Telephone <input type="tel" id="phone" name="phone"
+									/></label>
+								</form>
+							</div>
 						</div>
+						<form class="form-container-bottom">
+							<label for="request"><h3>Further request</h3></label>
+							<textarea id="request" name="w3review" rows="5"></textarea>
+						</form>
+						<button type="submit">RESERVE</button>
 					</div>
-					<form class="form-container-bottom">
-						<label for="request"><h3>Further request</h3></label>
-						<textarea id="request" name="w3review" rows="5"></textarea>
-					</form>
-					<button type="submit">RESERVE</button>
-				</div>
-			</section>
-			<section class="map">
-				<h2>Our location</h2>
-				<div id="map">
-					<iframe
-						frameborder="0"
-						scrolling="no"
-						marginheight="0"
-						marginwidth="0"
-						src="https://www.openstreetmap.org/export/embed.html?bbox=-74.00393307209016%2C40.73268570133258%2C-73.99942696094514%2C40.735275026168516&amp;layer=mapnik"
-						style="border: 1px solid black"></iframe>
-				</div>
-			</section>
-		</main>
-		<footer>
-			<div class="container-footer">
+				</section>
+				<section class="map">
+					<h2>Our location</h2>
+					<div id="map">
+						<iframe
+							frameborder="0"
+							scrolling="no"
+							marginheight="0"
+							marginwidth="0"
+							src="https://www.openstreetmap.org/export/embed.html?bbox=-74.00393307209016%2C40.73268570133258%2C-73.99942696094514%2C40.735275026168516&amp;layer=mapnik"
+							style="border: 1px solid black"></iframe>
+					</div>
+				</section>
+			</main>
+			<footer>
 				<div class="info">
-					<div class="card-info">
-						<h6>Opening hours</h6>
-						<span>Monday: Closed</span>
-						<span>Tue-Wed : 9am - 10pm</span>
-						<span>Thu-Fri : 9am - 10pm</span>
-						<span>Sat-Sun : 5pm - 10pm</span>
-					</div>
-					<div class="card-info">
-						<h6>Contact</h6>
-						<span>13 Christopher Street</span>
-						<span>New York,</span>
-						<span>NY 10014-3543</span><br />
-						<span>+01 2000 800 9999</span>
-					</div>
-					<div class="card-info">
-						<h6>Social networks</h6>
-						<div class="container-card-info">
-							<a href="#" class="fab fa-facebook-f"></a>
-							<a href="#" class="fab fa-instagram"></a>
-							<a href="#" class="fab fa-pinterest-p"></a>
+					<div class="info-container">
+						<div class="card-info">
+							<h6>Opening hours</h6>
+							<span>Monday: Closed</span>
+							<span>Tue-Wed : 9am - 10pm</span>
+							<span>Thu-Fri : 9am - 10pm</span>
+							<span>Sat-Sun : 5pm - 10pm</span>
+						</div>
+						<div class="card-info">
+							<h6>Contact</h6>
+							<span>13 Christopher Street</span>
+							<span>New York,</span>
+							<span>NY 10014-3543</span><br />
+							<span>+01 2000 800 9999</span>
+						</div>
+						<div class="card-info">
+							<h6>Social networks</h6>
+							<div class="container-card-info">
+								<a href="#" class="fab fa-facebook-f"></a>
+								<a href="#" class="fab fa-instagram"></a>
+								<a href="#" class="fab fa-pinterest-p"></a>
+							</div>
 						</div>
 					</div>
 				</div>
 				<div class="terms">
-					<div class="adaptive-img-contain">
-						<span>
-							<img src="../assets/icons/logo-3wa.webp" alt="Logo 3wa" />
-						</span>
+					<div class="terms-container">
+						<div class="adaptive-img-contain">
+							<span>
+								<img src="../assets/icons/logo-3wa.webp" alt="Logo 3wa" />
+							</span>
+						</div>
+						<div class="text">
+							<p>
+								Cet exercice de <a href="" target="_blank">3W Academy</a> est
+								mis à disposition
+								<span
+									>pour l'usage personnel des étudiants. Pas de Rediffusion -
+									Attribution - Pas d'Utilisation Commerciale - Pas de
+									Modification - International</span
+								>.
+							</p>
+							<p>
+								Les autorisations au-delà du champ de cette licence peuvent être
+								obtenues auprès de contact@3wa.fr. Les maquettes ont été
+								réalisées par
+								<span>Catherine Denos</span>.
+							</p>
+						</div>
 					</div>
-					<p>
-						Cet exercice de <a href="" target="_blank">3W Academy</a> est mis à
-						disposition
-						<span
-							>pour l'usage personnel des étudiants. Pas de Rediffusion -
-							Attribution - Pas d'Utilisation Commerciale - Pas de Modification
-							- International</span
-						>.<br />
-						Les autorisations au-delà du champ de cette licence peuvent être
-						obtenues auprès de contact@3wa.fr. Les maquettes ont été réalisées
-						par <span>Catherine Denos</span>.
-					</p>
 				</div>
-			</div>
-		</footer>
+			</footer>
+		</div>
 		<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 	</body>
 </html>
